test/typecheck/bad-grow-memory-type-mismatch.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (memory 0)
  (func
    f32.const 100
    grow_memory
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-grow-memory-type-mismatch.txt:7:5: error: type mismatch in memory.grow, expected [i32] but got [f32]
    grow_memory
    ^^^^^^^^^^^
;;; STDERR ;;)
